--- a/index.html
+++ b/index.html
@@ -275,5 +275,76 @@
 
 		</div>
 	</section>
+
+	<section class="register">
+		<div class="ed-container register__content">
+			<div class="ed-item s-100">
+				<h2 class="s-center">LA MEJOR ESCUELA ONLINE DE <br>
+					FORMACIÓN ONLINE
+				</h2>
+				<p class="s-center">APRENDE DE LOS MEJORES</p>
+
+			</div>
+
+			<div class="ed-item s-100 s-center">
+				<a href="" class="hero__course s-to-center">INSCRIBIRME</a>
+			</div>
+		</div>
+	</section>
+
+	<footer>
+		<div class="ed-container">
+			<div class="ed-item lg-1-3 lg-center lg-main-center lg-cross-center">
+				<?xml version="1.0" encoding="utf-8"?>
+					<!-- Generator: Adobe Illustrator 22.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+					<svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+						 viewBox="0 0 83.8 31.9" style="enable-background:new 0 0 83.8 31.9;" xml:space="preserve">
+					<style type="text/css">
+						.st0{fill:#FFFFFF;}
+					</style>
+					<title>tribe_logo</title>
+					<g id="academy">
+						<path class="st0" d="M39.4,25.2h-1.1L38,25.8h-0.4l1.1-2.6H39l1,2.6h-0.4L39.4,25.2z M39.3,24.9l-0.4-1.1l-0.4,1.1H39.3z"/>
+						<path class="st0" d="M43.4,25.8c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3c0.4,0,0.7,0.2,0.9,0.5l-0.2,0.2c-0.2-0.2-0.4-0.4-0.7-0.4
+							c-0.6,0-1,0.4-1,1s0.4,1,1,1c0.3,0,0.6-0.1,0.7-0.4l0.2,0.2C44.1,25.6,43.7,25.8,43.4,25.8z"/>
+						<path class="st0" d="M48.2,25.2H47l-0.2,0.6h-0.4l1.1-2.6h0.2l1.1,2.6h-0.4L48.2,25.2z M48,24.9l-0.4-1.1l-0.4,1.1H48z"/>
+						<path class="st0" d="M52.1,25.8H51v-2.7h1c0.7,0.1,1.3,0.7,1.2,1.4C53.2,25.2,52.6,25.7,52.1,25.8L52.1,25.8z M52.9,24.5
+							c0-0.5-0.3-1-0.9-1c0,0,0,0-0.1,0h-0.6v2H52C52.5,25.4,52.9,25,52.9,24.5C52.9,24.5,52.9,24.5,52.9,24.5z"/>
+						<path class="st0" d="M57.5,25.8h-1.8v-2.7h1.8v0.3H56v0.8h1.1v0.3H56v0.9h1.4L57.5,25.8z"/>
+						<path class="st0" d="M62.8,25.8h-0.4v-2l-1,2h-0.2l-1-2v2h-0.4v-2.7h0.5l1,2l1-2h0.5L62.8,25.8z"/>
+						<path class="st0" d="M66.5,24.7v1h-0.4v-1l-1-1.6h0.5l0.7,1.2l0.7-1.2h0.5L66.5,24.7z"/>
+					</g>
+					<g id="icon">
+						<polygon class="st0" points="26.1,26.5 27.2,26.5 22.5,17 21.4,17 	"/>
+						<polygon class="st0" points="11.9,17 10.9,17 6.1,26.5 7.1,26.5 	"/>
+						<polygon class="st0" points="16.8,7.6 20.9,16 22,16 16.8,5.4 11.4,16 12.4,16 	"/>
+						<polygon class="st0" points="12.4,16 11.4,16 10.9,17 11.9,17 	"/>
+						<polygon class="st0" points="21.4,17 22.5,17 22,16 20.9,16 	"/>
+						<polygon class="st0" points="16.1,17 17.1,17 17.1,17 21.4,17 20.9,16 12.4,16 11.9,17 16.1,17 	"/>
+						<rect x="16.1" y="17" class="st0" width="1" height="9.5"/>
+						<polygon class="st0" points="16.1,17 17.1,17 17.1,17 	"/>
+					</g>
+					<g id="tribe">
+						<path class="st0" d="M37.3,13.4h-4.7v7.6h-1.5v-7.6h-4.7v-1.3h10.9V13.4z"/>
+						<path class="st0" d="M47.4,18.3l1.7,2.8h-1.8l-1.6-2.6h-5v2.6h-1.5v-8.9h7c2,0,3.4,1.2,3.4,3.1C49.7,16.7,48.8,18,47.4,18.3z
+							 M40.7,17.2h4.8c1,0,2.5,0,2.5-1.9s-1.5-1.9-2.5-1.9h-4.8V17.2z"/>
+						<path class="st0" d="M53,21.1h-1.5v-8.9H53V21.1z"/>
+						<path class="st0" d="M66.4,18.5c0,1.5-0.9,2.6-2.9,2.6h-8.1v-8.9h7.9c2,0,2.6,1.1,2.6,2.4c0,0.7-0.2,1.3-0.7,1.8
+							C66,16.8,66.4,17.6,66.4,18.5z M56.9,15.9h6c0.8,0,1.5,0,1.5-1.2s-0.7-1.2-1.5-1.2h-6L56.9,15.9z M64.9,18.5c0-1.3-0.7-1.3-1.5-1.3
+							h-6.5v2.6h6.5C64.2,19.8,64.8,19.8,64.9,18.5L64.9,18.5z"/>
+						<path class="st0" d="M69.8,13.4V16h7.9v1.3h-7.9v2.5h7.9v1.3h-9.4v-8.9h9.4v1.3L69.8,13.4z"/>
+					</g>
+					</svg>
+			</div>
+			<div class="ed-item lg-1-3 lg-center lg-cross-center lg-main-center">
+				<a href="">AVISO DE PRIVACIDAD</a>
+			</div>
+			<div class="ed-item lg-1-3 lg-center lg-cross-center lg-main-center">
+				<a href="">Facebook</a>
+				<a href="">Instagram</a>
+				<a href="">hola@tribeacademy.com</a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
