--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Tribe Academy</title>
 	<link rel="stylesheet" href="css/ed-grid.min.css">
 	<link rel="stylesheet" href="css/tribe.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+
 </head>
 <body>
 	<header class="hero">
@@ -64,7 +66,7 @@
 		</div>
 
 		<div class="ed-container hero__content">
-			<div class="ed-item ed-container s-50 s-to-left">
+			<div class="ed-item ed-container s-80 lg-50 s-to-left">
 				<h1>
 					Aprende Crypto Currency <br> <span class="hero__instructor">Con Tone Vays</span>
 				</h1>
@@ -294,7 +296,7 @@
 
 	<footer>
 		<div class="ed-container">
-			<div class="ed-item lg-1-3 lg-center lg-main-center lg-cross-center">
+			<div class="ed-item s-100 s-center s-mb-2 lg-1-3 lg-center lg-main-center lg-cross-center">
 				<?xml version="1.0" encoding="utf-8"?>
 					<!-- Generator: Adobe Illustrator 22.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 					<svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -336,10 +338,10 @@
 					</g>
 					</svg>
 			</div>
-			<div class="ed-item lg-1-3 lg-center lg-cross-center lg-main-center">
+			<div class="ed-item s-100 s-center s-mb-3 lg-1-3 lg-center lg-cross-center lg-main-center">
 				<a href="">AVISO DE PRIVACIDAD</a>
 			</div>
-			<div class="ed-item lg-1-3 lg-center lg-cross-center lg-main-center">
+			<div class="ed-item s-100 s-center lg-1-3 lg-center lg-cross-center lg-main-center">
 				<a href="">Facebook</a>
 				<a href="">Instagram</a>
 				<a href="">hola@tribeacademy.com</a>
