Pagina de login completada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 
 </head>
-<body>
+<body class="full_background">
 	<header class="hero">
 		<div class="ed-container hero__top">
 			<div class="ed-item s-50">
@@ -58,7 +58,7 @@
 				<nav class="hero__nav">
 					<ul>
 						<li><a href="">CURSOS</a></li>
-						<li><a href="">LOGIN</a></li>
+						<li><a href="login.html">LOGIN</a></li>
 					</ul>
 		
 				</nav>
