--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			<div class="ed-item s-50 s-main-end s-cross-center">
 				<nav class="hero__nav">
 					<ul>
+						<li><a href="">BUSCAR</a></li>
 						<li><a href="">CURSOS</a></li>
 						<li><a href="login.html">LOGIN</a></li>
 					</ul>
