Diseno de card del curso que se encuetra activo

--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-	<header class="full_background">
+	<header class="full_background lg-mb-4">
 		<div class="ed-container hero__top">
 			<div class="ed-item s-50 lg-20">
 				<a href="index.html">
@@ -72,7 +72,36 @@
 
 	</header>
 
+    <section class="currentCourses">
+        <div class="ed-container">
+            <div class="ed-item s-100 lg-mb-2">
+                <h2>Continúa aprendiendo</h2>
+            </div>
+            <div class="ed-container ed-item s-100 lg-1-3 ">
+                <div class="currentCourse__card">
 
+                    <div class="currentCourse__top">
+                        <div class="currentCourse__module">
+                            <p>L1 / M1</p>
+                            <h3 class="currentCourse__title">Introucción a la actuación</h3>
+                        </div>         
+                    </div>
+
+                    <div class="currentCourse__bottom">
+                            <div class="currentCourse__module">
+                                <h3 class="currentCourse__title">Aprende actuación</h3>
+                                <p class="currentCourse__teacher">Con Roger González</p>
+                            </div>         
+                        </div>
+
+                </div>
+                <div class="currentCourse__progress">
+                    
+                </div>
+            </div>
+            
+        </div>
+    </section> 
 
 
 
